--- a/newindex.html
+++ b/newindex.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -174,7 +175,7 @@ button:hover {
   background-color: white;
   position: relative;
   top: -120px;
-  z-index: 99;
+  z-index: 97;
 }
 
 .bigidea {
@@ -183,12 +184,24 @@ button:hover {
   padding-top: 20px;
 }
 
+.footercopyrighttext {
+  font-size: 15px;
+  color: black;
+}
+
+.channel7interviewcontainer {
+  position: relative;
+  top: -210px;
+  z-index: 98;
+}
+
  </style>
 </head>
 
 <body>
+<center>
  <div id="everythingonwebsite">
-   <div id="maincontentminusfooter"><center>
+   <div id="maincontentminusfooter">
   
    <div class="header"><a href="/"><img src="https://ukrainedigital.org/images/UkraineDigitalDesignLogo-1.png" class="logo"></a></div>
 
@@ -207,22 +220,29 @@ Russia's invasion of Ukraine has taken the lives of thousands of innocent civili
 <div class="missionstatement" style="font-size: 22px;margin-bottom: 10px;">
 Find the perfect Ukrainian Digital Designer for your organization</div>
 
-<center><iframe src="https://www.cognitoforms.com/f/LypZd4A38023ZhSPVld8zQ/1" style="border:0;width:100%;" height="303"></iframe>
+<iframe src="https://www.cognitoforms.com/f/LypZd4A38023ZhSPVld8zQ/1" style="border:0;width:100%;" height="303"></iframe>
 <script src="https://www.cognitoforms.com/f/iframe.js"></script>
-<div class="designserviceformblocker"></div></center>
+<div class="designserviceformblocker"></div>
 
 <div class="footerlinebreak"></div>
 
-   </center></div>
+<div class="channel7interviewcontainer">
+<iframe src="https://player.vimeo.com/video/711328588?h=da6096fe86&autoplay=1&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+
+   </div> <! –– closes out section that's everything but footer ––>
    
    
-   <center><footer id="footer">2022 Ukraine Digital Design LLC.
+   <footer id="footer">
+   <div class="footercopyrighttext">2022 Ukraine Digital Design LLC.</div>
    <div class="footernavbar">
    <a href="/about" target="blank"><span class='footernavitem'>About</span></a>
    <a href="/designerregistration" target="blank"><span class='footernavitem'>Register as a Designer</span></a>
    <a href="/contact" target="blank"><span class="footernavitem">Contact</span></a>
    </div>
-   </footer></center>
+   </footer>
  </div>
+ </center>
  </body>
 </html>
