--- a/newindex.html
+++ b/newindex.html
@@ -132,14 +132,11 @@ button {
 color: #005BBB;
 background-color: white;
 border-color: #FFD500;
-border-radius: .25vw;
+border-radius: 0px;
 border-style: solid;
-border-width: .375vw;
+border-width: 4px;
 font-size: 18px;
 line-height: 30px;
-margin-bottom: 1.5vw;
-margin-right: .75vw;
-margin-left: .75vw;
 transition-duration: 1s;
   }
   
@@ -195,6 +192,22 @@ button:hover {
   z-index: 98;
 }
 
+.videoiframe {
+  border-style: solid;
+  border-width: 3.5px;
+  border-radius: 5px;
+  border-color: #FFD500;
+  box-shadow: 5px 5px 5px #FFD500;
+  width: 640px;
+  height: 360px;
+  margin-bottom: 20px;
+}
+
+h2 {
+  color: black;
+  font-size: 150%;
+}
+
  </style>
 </head>
 
@@ -227,7 +240,11 @@ Find the perfect Ukrainian Digital Designer for your organization</div>
 <div class="footerlinebreak"></div>
 
 <div class="channel7interviewcontainer">
-<iframe src="https://player.vimeo.com/video/711328588?h=da6096fe86&autoplay=1&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<h2>Ukraine Digital Design press: 7News Boston</h2>
+<iframe class="videoiframe" src="https://player.vimeo.com/video/711328588?h=da6096fe86&autoplay=1&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe><br>
+<button>
+<a href="https://whdh.com/news/local-high-school-student-launches-digital-platform-to-connect-ukrainians-with-remote-work/" target="blank">read more</a>
+</button>
 </div>
 
 
