--- a/newindex.html
+++ b/newindex.html
@@ -241,7 +241,7 @@ Find the perfect Ukrainian Digital Designer for your organization</div>
 
 <div class="channel7interviewcontainer">
 <h2>Ukraine Digital Design press: 7News Boston</h2>
-<iframe class="videoiframe" src="https://player.vimeo.com/video/711328588?h=da6096fe86&autoplay=1&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe><br>
+<iframe src="https://player.vimeo.com/video/711328588?h=da6096fe86&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe><br>
 <button>
 <a href="https://whdh.com/news/local-high-school-student-launches-digital-platform-to-connect-ukrainians-with-remote-work/" target="blank">read more</a>
 </button>
