--- a/newindex.html
+++ b/newindex.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -224,7 +225,9 @@ h2 {
 
 <div class="missionstatementcontainer">
 <div class="missionstatementtext">
-Russia's invasion of Ukraine has taken the lives of thousands of innocent civilians—leaving over 13.7 million Ukrainians displaced.<br><br>Our mission @ Ukraine Digital Design is to provide high-quality remote tech gigs to Ukrainian designers impacted by the war.<br><br>By hiring a Ukrainian designer for your next tech project—whether it is a new website, code-fix, logo, or custom graphic—you will help them through this difficult wartime period.
+Russia's invasion of Ukraine has taken the lives of thousands of innocent civilians—leaving over 13.7 million Ukrainians displaced. Without a clear end in sight to the conflict, these displaced Ukrainians are faced with tough economic prospects.
+<br><br>Inspired to help Ukrainians impacted by the war, 11th grade Brookline student Jack Botein had an idea: connect people in the US who need help with technology and digital design with Ukrainians who need work. Ukraine Digital Design isn’t a profit seeking entity, and our fundamental goal is to help Ukrainians through the difficulty of the Russian invasion by providing high-quality digital design jobs in the US—there are no fees or charges whatsoever. 
+<br><br>By hiring a Ukrainian designer for your next tech project—whether it is a new website, code-fix, logo, or custom graphic—you will help them through this difficult wartime period.
 </div>
 </div>
 
@@ -241,7 +244,7 @@ Find the perfect Ukrainian Digital Designer for your organization</div>
 
 <div class="channel7interviewcontainer">
 <h2>Ukraine Digital Design press: 7News Boston</h2>
-<iframe src="https://player.vimeo.com/video/711328588?h=da6096fe86&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe><br>
+<iframe class="videoiframe" src="https://player.vimeo.com/video/711328588?h=da6096fe86&autoplay=1&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe><br>
 <button>
 <a href="https://whdh.com/news/local-high-school-student-launches-digital-platform-to-connect-ukrainians-with-remote-work/" target="blank">read more</a>
 </button>
