--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 
 body {
   font-family: 'Sora', sans-serif;
-  background-color: #005BBB;
+  background-color: white;
   margin:0px;
   max-width: 100%;
   overflow-x: hidden;
@@ -42,6 +42,7 @@ body {
  
  a {
     text-decoration: none;
+    color: black;
   }
   
  #everythingonwebsite {
@@ -73,7 +74,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  color: #005BBB;
+  color: black;
   padding: 15px;
   background-color: white;
 }
@@ -208,7 +209,7 @@ button:hover {
   border-radius: 14px;
   padding: 6px;
   transition-duration: 1s;
-  color: #005BBB;
+  color: black;
 }
 
 .footernavitem:hover {
@@ -224,24 +225,13 @@ button:hover {
   
    <div class="header"><a href="/"><img src="http://ukrainedigital.org/images/UkraineDigitalDesignLogo-1.png" class="logo"></a><div class="specialtyclassification">Contact Us</div></div>
 
-<div class="headerlinebreak"></div>
+<center>
+     <div class="formblocker" style="width:100%;height:50px;background-color:white;position:relative;top:50px;"></div>
 
- <center>
- <form action="https://docs.google.com/forms/u/1/d/1O3Y7-lrLLLjTCbLjjZTHc5F-CN3ZWFUj6xwvTb9wkrY/formResponse?">
-  <span>Your Name:<br></span>
-    <input type="text"  autocomplete="off" name="entry.441797072" id="entry.441797072" style="font-size:17px;width:90vw;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br>
-    <br>
-      <span>Your Email:<br></span>
-    <input type="text"  autocomplete="off" name="entry.601714521" id="Email:" style="font-size:17px;width:90%;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br>
- <br>
-       <span>Your Message:<br></span>
-    <input type="text"  autocomplete="off" name="entry.665296152" id="entry.665296152" style="font-size:12px;width:90%;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br>
- <br>
-<button type="submit" onclick="window.location = 'https://feastfund.github.io/v.1/contact'" >Submit</button>
-  </form>
-  </center>
-  
-<div class="footerlinebreak"></div>
+  <iframe src="https://www.cognitoforms.com/f/LypZd4A38023ZhSPVld8zQ/2" style="border:0;width:100%;position:relative;top:-100px;" height="496"></iframe>
+<script src="https://www.cognitoforms.com/f/iframe.js"></script>
+     </center>
+     <div class="formblocker" style="width:100%;height:120px;background-color:white;position:relative;top:-220px;"></div>
 
    </center></div>
    <center><footer id="footer">2022 Ukraine Digital Design LLC.
