--- a/newindex.html
+++ b/newindex.html
@@ -257,9 +257,7 @@ Find the perfect Ukrainian Digital Designer for your organization</div>
    <footer id="footer">
    <div class="footercopyrighttext">2022 Ukraine Digital Design LLC.</div>
    <div class="footernavbar">
-   <a href="/about" target="blank"><span class='footernavitem'>About</span></a>
-   <a href="/designerregistration" target="blank"><span class='footernavitem'>Register as a Designer</span></a>
-   <a href="/contact" target="blank"><span class="footernavitem">Contact</span></a>
+   <a href="/contact" target="blank"><span class="footernavitem">Contact Us</span></a>
    </div>
    </footer>
  </div>
