--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ h2 {
  <div id="everythingonwebsite">
    <div id="maincontentminusfooter">
   
-   <div class="header"><a href="/"><img src="https://ukrainedigital.org/images/UkraineDigitalDesignLogo-1.png" class="logo"></a></div>
+   <div class="header"><a href="/"><img src="/images/UkraineDigitalDesignLogo-1.png" class="logo"></a></div>
 
 <div class="headerlinebreak"></div>
 
