--- a/index.html
+++ b/index.html
@@ -263,4 +263,11 @@ Find the perfect Ukrainian Digital Designer for your organization</div>
  </div>
  </center>
  </body>
+    <script language="javascript">
+<!--
+if ((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
+   location.replace("https://ukrainedigital.org/mobile");
+}
+-->
+</script>
 </html>
