--- a/mobile.html
+++ b/mobile.html
@@ -1,1 +1,268 @@
 
+
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Ukraine Digital Design</title>
+<link rel="shortcut icon" href="/images/favicon.ico" />
+  <meta charset="UTF-8">
+  <meta name="description" content="A platform dedicated to connecting Ukrainian Digital Designers impacted by Russia's invasion with high-quality U.S. work opportunities.">
+  <meta name="keywords" content="Ukraine Digital Design, Ukraine digital design, ukraine digital design, hire for Ukraine, Hire for Ukraine, Hire For Ukraine, Ukraine Digital Design, ukrainedigital.org, Ukraine, ukraine, helping ukraine, Russian Invasion, Jack Botein, Botein, Kyiv Web Design, web design, graphic design, logo design, graphics, HTML, CSS, JavaScript">
+  <meta name="author" content="Jack Botein">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2CQLD448D5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2CQLD448D5');
+</script>
+  
+  <style> 
+  @import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
+
+body {
+  font-family: 'Sora', sans-serif;
+  background-color: white;
+  margin:0px;
+  max-width: 100%;
+  overflow-x: hidden;
+  max-width: 100%;
+}
+  
+    ::selection {
+  color: #005BBB;
+  background: #FFD500;
+ }
+ 
+ a {
+    text-decoration: none;
+    color: black;
+  }
+  
+  body::-webkit-scrollbar {
+  width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+  background: white;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #FFD500;
+  border-radius: 20px;
+  border: 3px solid #FFD500;
+}
+
+ #everythingonwebsite {
+  position: relative;
+  min-height: 100vh;
+}
+
+#cmaincontentminusfooter {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+.logo {
+  float: center;
+  width: 80vw;
+  max-width: 450px;
+  margin-left: -40px;
+}
+
+.header {
+  width: 100%;
+  padding: 20px;
+  background-color: white;
+  position: fixed;
+  top: 0vh;
+  z-index: 99;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: black;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: white;
+}
+
+.header {
+  width: 100%;
+  padding: 20px;
+  background-color: white;
+  position: fixed;
+  top: 0vh;
+  z-index: 99;
+}
+
+.missionstatementcontainer {
+  border-style: solid;
+  border-width: 3.5px;
+  border-radius: 5px;
+  border-color: #FFD500;
+  box-shadow: 5px 5px 5px #FFD500;
+  width: 70vw;
+}
+
+.missionstatementtext {
+  font-size: 20px;
+  color: black;
+  margin-left: 5vw;
+  margin-right: 4vw;
+  padding: 2vw;
+}
+
+.headerlinebreak {
+  height: 100px;
+}
+
+.footerlinebreak {
+  height: 0px;
+}
+
+.missionlinebreak {
+  height: 50px;
+}
+
+button {
+color: #005BBB;
+background-color: white;
+border-color: #FFD500;
+border-radius: 0px;
+border-style: solid;
+border-width: 4px;
+font-size: 18px;
+line-height: 30px;
+transition-duration: 1s;
+  }
+  
+button:hover {
+  background-color: #FFD500;
+}
+
+.footernavbar {
+  color: black;
+  font-size: 10px;
+  padding-top: 22px;
+  padding-bottom: 23px;
+}
+
+.footernavitem {
+  margin-right: 10px;
+  margin-left: 10px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #FFD500;
+  border-radius: 14px;
+  padding: 6px;
+  transition-duration: 1s;
+}
+
+.footernavitem:hover {
+  background-color: #FFD500;
+}
+
+.designserviceformblocker {
+  height: 120px;
+  width: 100vw;
+  background-color: white;
+  position: relative;
+  top: -120px;
+  z-index: 97;
+}
+
+.bigidea {
+  font-size: 35px;
+  padding-bottom: 50px;
+  padding-top: 20px;
+}
+
+.footercopyrighttext {
+  font-size: 15px;
+  color: black;
+}
+
+.channel7interviewcontainer {
+  position: relative;
+  top: -210px;
+  z-index: 98;
+}
+
+.videoiframe {
+  border-style: solid;
+  border-width: 3.5px;
+  border-radius: 5px;
+  border-color: #FFD500;
+  box-shadow: 5px 5px 5px #FFD500;
+  width: 640px;
+  height: 360px;
+  margin-bottom: 20px;
+}
+
+h2 {
+  color: black;
+  font-size: 150%;
+}
+
+ </style>
+</head>
+
+<body>
+<center>
+ <div id="everythingonwebsite">
+   <div id="maincontentminusfooter">
+  
+   <div class="header"><a href="/"><img src="/images/UkraineDigitalDesignLogo-1.png" class="logo"></a></div>
+
+<div class="headerlinebreak"></div>
+
+<div class="bigidea"><b>Hire Ukrainian digital designers impacted by Russia's invasion</b></div>
+
+<div class="missionstatementcontainer">
+<div class="missionstatementtext">
+Russia's invasion of Ukraine has taken the lives of thousands of innocent civilians—leaving over 13.7 million Ukrainians displaced. Without a clear end in sight to the conflict, these displaced Ukrainians are faced with tough economic prospects.
+<br><br>Inspired to help Ukrainians impacted by the war, 11th grade Brookline student Jack Botein had an idea: connect people in the US who need help with technology and digital design with Ukrainians who need work. Ukraine Digital Design isn’t a profit seeking entity, and our fundamental goal is to help Ukrainians through the difficulty of the Russian invasion by providing high-quality digital design jobs in the US—there are no fees or charges whatsoever. 
+<br><br>By hiring a Ukrainian designer for your next tech project—whether it is a new website, code-fix, logo, or custom graphic—you will help them through this difficult wartime period.
+</div>
+</div>
+
+<div class="missionlinebreak"></div>
+
+<div class="missionstatement" style="font-size: 22px;margin-bottom: 10px;">
+Find the perfect Ukrainian Digital Designer for your organization</div>
+
+<iframe src="https://www.cognitoforms.com/f/LypZd4A38023ZhSPVld8zQ/1" style="border:0;width:100%;" height="303"></iframe>
+<script src="https://www.cognitoforms.com/f/iframe.js"></script>
+<div class="designserviceformblocker"></div>
+
+<div class="footerlinebreak"></div>
+
+<div class="channel7interviewcontainer">
+<h2>Ukraine Digital Design press: 7News Boston</h2>
+<iframe class="videoiframe" src="https://player.vimeo.com/video/711328588?h=da6096fe86&autoplay=1&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe><br>
+<button>
+<a href="https://whdh.com/news/local-high-school-student-launches-digital-platform-to-connect-ukrainians-with-remote-work/" target="blank">read more</a>
+</button>
+</div>
+
+
+   </div> <! –– closes out section that's everything but footer ––>
+   
+   
+   <footer id="footer">
+   <div class="footercopyrighttext">2022 Ukraine Digital Design LLC.</div>
+   <div class="footernavbar">
+   <a href="/contact" target="blank"><span class="footernavitem">Contact Us</span></a>
+   </div>
+   </footer>
+ </div>
+ </center>
+ </body>
+</html>
