--- a/mobile.html
+++ b/mobile.html
@@ -43,20 +43,6 @@ body {
     text-decoration: none;
     color: black;
   }
-  
-  body::-webkit-scrollbar {
-  width: 12px;
-}
-
-body::-webkit-scrollbar-track {
-  background: white;
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: #FFD500;
-  border-radius: 20px;
-  border: 3px solid #FFD500;
-}
 
  #everythingonwebsite {
   position: relative;
@@ -108,15 +94,16 @@ body::-webkit-scrollbar-thumb {
   border-radius: 5px;
   border-color: #FFD500;
   box-shadow: 5px 5px 5px #FFD500;
-  width: 70vw;
+  width: 89vw;
+  margin-left:4.5vw;
+  margin-right:3vw;
 }
 
 .missionstatementtext {
-  font-size: 20px;
+  font-size: 17px;
   color: black;
-  margin-left: 5vw;
-  margin-right: 4vw;
-  padding: 2vw;
+  padding: 10px;
+  text-align: left;
 }
 
 .headerlinebreak {
@@ -179,7 +166,7 @@ button:hover {
 }
 
 .bigidea {
-  font-size: 35px;
+  font-size: 27px;
   padding-bottom: 50px;
   padding-top: 20px;
 }
@@ -208,7 +195,7 @@ button:hover {
 
 h2 {
   color: black;
-  font-size: 150%;
+  font-size: 17px;
 }
 
  </style>
@@ -223,7 +210,7 @@ h2 {
 
 <div class="headerlinebreak"></div>
 
-<div class="bigidea"><b>Hire Ukrainian digital designers impacted by Russia's invasion</b></div>
+<div class="bigidea"><b>Hire Ukrainian digital designers hurt by the war</b></div>
 
 <div class="missionstatementcontainer">
 <div class="missionstatementtext">
@@ -245,8 +232,8 @@ Find the perfect Ukrainian Digital Designer for your organization</div>
 <div class="footerlinebreak"></div>
 
 <div class="channel7interviewcontainer">
-<h2>Ukraine Digital Design press: 7News Boston</h2>
-<iframe class="videoiframe" src="https://player.vimeo.com/video/711328588?h=da6096fe86&autoplay=1&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe><br>
+<h2><b>Ukraine Digital Design in the news</b></h2>
+<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/711328588?h=da6096fe86&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script><br>
 <button>
 <a href="https://whdh.com/news/local-high-school-student-launches-digital-platform-to-connect-ukrainians-with-remote-work/" target="blank">read more</a>
 </button>
