--- a/mobile.html
+++ b/mobile.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -28,7 +31,7 @@ body {
   margin:0px;
   max-width: 100%;
   overflow-x: hidden;
-  max-width: 100%;
+  width: 100%;
 }
   
     ::selection {
@@ -44,6 +47,7 @@ body {
  #everythingonwebsite {
   position: relative;
   min-height: 100vh;
+  max-width: 100%;
 }
 
 #cmaincontentminusfooter {
