--- a/index.html
+++ b/index.html
@@ -225,9 +225,7 @@ h2 {
 
 <div class="missionstatementcontainer">
 <div class="missionstatementtext">
-Russia's invasion of Ukraine has taken the lives of thousands of innocent civilians—leaving over 13.7 million Ukrainians displaced. Without a clear end in sight to the conflict, these displaced Ukrainians are faced with tough economic prospects.
-<br><br>Inspired to help Ukrainians impacted by the war, 11th grade Brookline student Jack Botein had an idea: connect people in the US who need help with technology and digital design with Ukrainians who need work. Ukraine Digital Design isn’t a profit seeking entity, and our fundamental goal is to help Ukrainians through the difficulty of the Russian invasion by providing high-quality digital design jobs in the US—there are no fees or charges whatsoever. 
-<br><br>By hiring a Ukrainian designer for your next tech project—whether it is a new website, code-fix, logo, or custom graphic—you will help them through this difficult wartime period.
+The Russian invasion has forced millions of Ukrainian civilians to flee—leaving many skilled digital designers struggling with a higher cost of living. Ukraine Digital Design was launched by 11th grade student Jack Botein to financially uplift Ukrainians during this difficult time. <br><br>Make a difference by hiring a Ukrainian digital designer for your website, graphic, and logo design needs.
 </div>
 </div>
 
