--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ The Russian invasion has forced millions of Ukrainian civilians to flee—leavin
 <div class="missionlinebreak"></div>
 
 <div class="missionstatement" style="font-size: 22px;margin-bottom: 10px;">
-Let us know what kind of digital design you're looking for:</div>
+Let us know what kind of digital design assistance you're looking for:</div>
 
 <iframe src="https://www.cognitoforms.com/f/LypZd4A38023ZhSPVld8zQ/1" style="border:0;width:100%;" height="303"></iframe>
 <script src="https://www.cognitoforms.com/f/iframe.js"></script>
