--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ Let us know what kind of digital design assistance you're looking for:</div>
    
    
    <footer id="footer">
-   <div class="footercopyrighttext">2022 Ukraine Digital Design LLC.</div>
+   <div class="footercopyrighttext">2022 Ukraine Digital Design</div>
    <div class="footernavbar">
    <a href="/contact" target="blank"><span class="footernavitem">Contact Us</span></a>
    </div>
