--- a/contact.html
+++ b/contact.html
@@ -234,7 +234,7 @@ button:hover {
      <div class="formblocker" style="width:100%;height:120px;background-color:white;position:relative;top:-220px;"></div>
 
    </center></div>
-   <center><footer id="footer">2022 Ukraine Digital Design LLC.
+   <center><footer id="footer">2022 Ukraine Digital Design
    </footer></center>
  </div>
  </body>
