--- a/mobile.html
+++ b/mobile.html
@@ -245,7 +245,7 @@ Find the perfect Ukrainian Digital Designer for your organization</div>
    
    
    <footer id="footer">
-   <div class="footercopyrighttext">2022 Ukraine Digital Design LLC.</div>
+   <div class="footercopyrighttext">2022 Ukraine Digital Design</div>
    <div class="footernavbar">
    <a href="/contact" target="blank"><span class="footernavitem">Contact Us</span></a>
    </div>
