--- a/index.html
+++ b/index.html
@@ -147,24 +147,17 @@ button:hover {
 
 .footernavbar {
   color: black;
-  font-size: 10px;
-  padding-top: 22px;
-  padding-bottom: 23px;
+  font-size: 12px;
+  padding-top: 14px;
+  padding-bottom: 35px;
 }
 
 .footernavitem {
   margin-right: 10px;
   margin-left: 10px;
-  border-style: solid;
-  border-width: 3px;
-  border-color: #FFD500;
   border-radius: 14px;
   padding: 6px;
   transition-duration: 1s;
-}
-
-.footernavitem:hover {
-  background-color: #FFD500;
 }
 
 .designserviceformblocker {
@@ -255,7 +248,7 @@ Let us know what kind of digital design assistance you're looking for:</div>
    <footer id="footer">
    <div class="footercopyrighttext">2022 Ukraine Digital Design</div>
    <div class="footernavbar">
-   <a href="/contact" target="blank"><span class="footernavitem">Contact Us</span></a>
+   <a href="mailto:info@ukrainedigital.org" target="blank"><span class="footernavitem">info@ukrainedigital.org</span></a>
    </div>
    </footer>
  </div>
