--- a/mobile.html
+++ b/mobile.html
@@ -116,7 +116,7 @@ body {
 }
 
 .missionlinebreak {
-  height: 50px;
+  height: 25px;
 }
 
 button {
@@ -137,24 +137,17 @@ button:hover {
 
 .footernavbar {
   color: black;
-  font-size: 10px;
-  padding-top: 22px;
-  padding-bottom: 23px;
+  font-size: 12px;
+  padding-top: 14px;
+  padding-bottom: 35px;
 }
 
 .footernavitem {
   margin-right: 10px;
   margin-left: 10px;
-  border-style: solid;
-  border-width: 3px;
-  border-color: #FFD500;
   border-radius: 14px;
   padding: 6px;
   transition-duration: 1s;
-}
-
-.footernavitem:hover {
-  background-color: #FFD500;
 }
 
 .designserviceformblocker {
@@ -215,16 +208,17 @@ h2 {
 
 <div class="missionstatementcontainer">
 <div class="missionstatementtext">
-Russia's invasion of Ukraine has taken the lives of thousands of innocent civilians—leaving over 13.7 million Ukrainians displaced. Without a clear end in sight to the conflict, these displaced Ukrainians are faced with tough economic prospects.
-<br><br>Inspired to help Ukrainians impacted by the war, 11th grade Brookline student Jack Botein had an idea: connect people in the US who need help with technology and digital design with Ukrainians who need work. Ukraine Digital Design isn’t a profit seeking entity, and our fundamental goal is to help Ukrainians through the difficulty of the Russian invasion by providing high-quality digital design jobs in the US—there are no fees or charges whatsoever. 
-<br><br>By hiring a Ukrainian designer for your next tech project—whether it is a new website, code-fix, logo, or custom graphic—you will help them through this difficult wartime period.
+The Russian invasion has forced millions of Ukrainian civilians to flee—leaving many skilled digital designers struggling with a higher cost of living. Ukraine Digital Design was launched by 11th grade student Jack Botein to financially uplift Ukrainians during this difficult time.
+<br><br>
+  Make a difference by hiring a Ukrainian digital designer for your website, graphic, and logo design needs.
 </div>
 </div>
 
 <div class="missionlinebreak"></div>
 
 <div class="missionstatement" style="font-size: 22px;margin-bottom: 10px;">
-Find the perfect Ukrainian Digital Designer for your organization</div>
+Let us know what kind of digital design assistance you're looking for:
+</div>
 
 <iframe src="https://www.cognitoforms.com/f/LypZd4A38023ZhSPVld8zQ/1" style="border:0;width:100%;" height="303"></iframe>
 <script src="https://www.cognitoforms.com/f/iframe.js"></script>
@@ -234,7 +228,7 @@ Find the perfect Ukrainian Digital Designer for your organization</div>
 
 <div class="channel7interviewcontainer">
 <h2><b>Ukraine Digital Design in the news</b></h2>
-<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/711328588?h=da6096fe86&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script><br>
+<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/711328588?h=da6096fe86&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script><br>
 <button>
 <a href="https://whdh.com/news/local-high-school-student-launches-digital-platform-to-connect-ukrainians-with-remote-work/" target="blank">read more</a>
 </button>
@@ -247,7 +241,7 @@ Find the perfect Ukrainian Digital Designer for your organization</div>
    <footer id="footer">
    <div class="footercopyrighttext">2022 Ukraine Digital Design</div>
    <div class="footernavbar">
-   <a href="/contact" target="blank"><span class="footernavitem">Contact Us</span></a>
+   <a href="mailto:info@ukrainedigital.org" target="blank"><span class="footernavitem">info@ukrainedigital.org</span></a>
    </div>
    </footer>
  </div>
