--- a/index.html
+++ b/index.html
@@ -4,261 +4,12 @@
 <html>
 <head>
 <title>Ukraine Digital Design</title>
-<link rel="shortcut icon" href="/images/favicon.ico" />
-  <meta charset="UTF-8">
-  <meta name="description" content="A platform dedicated to connecting Ukrainian Digital Designers impacted by Russia's invasion with high-quality U.S. work opportunities.">
-  <meta name="keywords" content="Ukraine Digital Design, Ukraine digital design, ukraine digital design, hire for Ukraine, Hire for Ukraine, Hire For Ukraine, Ukraine Digital Design, ukrainedigital.org, Ukraine, ukraine, helping ukraine, Russian Invasion, Jack Botein, Botein, Kyiv Web Design, web design, graphic design, logo design, graphics, HTML, CSS, JavaScript">
-  <meta name="author" content="Jack Botein">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2CQLD448D5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-2CQLD448D5');
-</script>
-  
-  <style> 
-  @import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
-
-body {
-  font-family: 'Sora', sans-serif;
-  background-color: white;
-  margin:0px;
-  max-width: 100%;
-  overflow-x: hidden;
-}
-  
-    ::selection {
-  color: #005BBB;
-  background: #FFD500;
- }
- 
- a {
-    text-decoration: none;
-    color: black;
-  }
-  
-  body::-webkit-scrollbar {
-  width: 12px;
-}
-
-body::-webkit-scrollbar-track {
-  background: white;
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: #FFD500;
-  border-radius: 20px;
-  border: 3px solid #FFD500;
-}
-
- #everythingonwebsite {
-  position: relative;
-  min-height: 100vh;
-}
-
-#cmaincontentminusfooter {
-  padding-bottom: 2.5rem;    /* Footer height */
-}
-
-.logo {
-  float: center;
-  width: 80vw;
-  max-width: 450px;
-  margin-left: -40px;
-}
-
-.header {
-  width: 100%;
-  padding: 20px;
-  background-color: white;
-  position: fixed;
-  top: 0vh;
-  z-index: 99;
-}
-
-#footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  color: black;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background-color: white;
-}
-
-.header {
-  width: 100%;
-  padding: 20px;
-  background-color: white;
-  position: fixed;
-  top: 0vh;
-  z-index: 99;
-}
-
-.missionstatementcontainer {
-  border-style: solid;
-  border-width: 0px;
-  border-radius: 0px;
-  border-color: #FFD500;
-  box-shadow: 0px 0px 0px #FFD500;
-  width: 70vw;
-}
-
-.missionstatementtext {
-  font-size: 20px;
-  color: black;
-  margin-left: 5vw;
-  margin-right: 4vw;
-  padding: 2vw;
-}
-
-.headerlinebreak {
-  height: 100px;
-}
-
-.footerlinebreak {
-  height: 0px;
-}
-
-.missionlinebreak {
-  height: 25px;
-}
-
-button {
-color: #005BBB;
-background-color: white;
-border-color: #FFD500;
-border-radius: 0px;
-border-style: solid;
-border-width: 4px;
-font-size: 18px;
-line-height: 30px;
-transition-duration: 1s;
-  }
-  
-button:hover {
-  background-color: #FFD500;
-}
-
-.footernavbar {
-  color: black;
-  font-size: 12px;
-  padding-top: 14px;
-  padding-bottom: 35px;
-}
-
-.footernavitem {
-  margin-right: 10px;
-  margin-left: 10px;
-  border-radius: 14px;
-  padding: 6px;
-  transition-duration: 1s;
-}
-
-.designserviceformblocker {
-  height: 120px;
-  width: 100vw;
-  background-color: white;
-  position: relative;
-  top: -120px;
-  z-index: 97;
-}
-
-.bigidea {
-  font-size: 35px;
-  padding-bottom: 50px;
-  padding-top: 20px;
-}
-
-.footercopyrighttext {
-  font-size: 15px;
-  color: black;
-}
-
-.channel7interviewcontainer {
-  position: relative;
-  top: -210px;
-  z-index: 98;
-}
-
-.videoiframe {
-  border-style: solid;
-  border-width: 3.5px;
-  border-radius: 5px;
-  border-color: #FFD500;
-  box-shadow: 5px 5px 5px #FFD500;
-  width: 640px;
-  height: 360px;
-  margin-bottom: 20px;
-}
-
-h2 {
-  color: black;
-  font-size: 150%;
-}
-
- </style>
+<meta http-equiv="refresh" content="0; url=https://www.uddu.design/" />
 </head>
 
 <body>
-<center>
- <div id="everythingonwebsite">
-   <div id="maincontentminusfooter">
-  
-   <div class="header"><a href="/"><img src="/images/UkraineDigitalDesignLogo-1.png" class="logo"></a></div>
 
-<div class="headerlinebreak"></div>
-
-<div class="bigidea"><b>Hire Ukrainian digital designers impacted by Russia's invasion</b></div>
-
-<div class="missionstatementcontainer">
-<div class="missionstatementtext">
-The Russian invasion has forced millions of Ukrainian civilians to flee—leaving many skilled digital designers struggling with a higher cost of living. Ukraine Digital Design was launched by 11th grade student Jack Botein to financially uplift Ukrainians during this difficult time. <br><br>Make a difference by hiring a Ukrainian digital designer for your website, graphic, and logo design needs.
-</div>
-</div>
-
-<div class="missionlinebreak"></div>
-
-<div class="missionstatement" style="font-size: 22px;margin-bottom: 10px;">
-Let us know what kind of digital design assistance you're looking for:</div>
-
-<iframe src="https://www.cognitoforms.com/f/LypZd4A38023ZhSPVld8zQ/1" style="border:0;width:100%;" height="303"></iframe>
-<script src="https://www.cognitoforms.com/f/iframe.js"></script>
-<div class="designserviceformblocker"></div>
-
-<div class="footerlinebreak"></div>
-
-<div class="channel7interviewcontainer">
-<h2>Ukraine Digital Design press: 7News Boston</h2>
-<iframe class="videoiframe" src="https://player.vimeo.com/video/711328588?h=da6096fe86&autoplay=1&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="fullscreen; picture-in-picture" allowfullscreen></iframe><br>
-<button>
-<a href="https://whdh.com/news/local-high-school-student-launches-digital-platform-to-connect-ukrainians-with-remote-work/" target="blank">read more</a>
-</button>
-</div>
-
-
-   </div> <! –– closes out section that's everything but footer ––>
-   
-   
-   <footer id="footer">
-   <div class="footercopyrighttext">2022 Ukraine Digital Design</div>
-   <div class="footernavbar">
-   <a href="mailto:info@ukrainedigital.org" target="blank"><span class="footernavitem">info@ukrainedigital.org</span></a>
-   </div>
-   </footer>
- </div>
- </center>
  </body>
-    <script language="javascript">
-<!--
-if ((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
-   location.replace("https://ukrainedigital.org/mobile");
-}
--->
+ 
 </script>
 </html>
