--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
 <title>Ukraine Digital Design</title>
 <meta http-equiv="refresh" content="0; url=https://www.uddu.design/" />
+ <style>
+  a {
+   text-decoration: none;
+  }
+ </style>
 </head>
 
 <body>
-
+<p>Ukraine Digital Design has joined forces with <a href="http://example.com/">Ukraine Digital Design United (UDDU)</a></p>
  </body>
  
-</script>
 </html>
