--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<p>Ukraine Digital Design has joined forces with <a href="http://example.com/">Ukraine Digital Design United (UDDU)</a></p>
+<p>Ukraine Digital Design has joined forces with <a href="http://example.com/">Ukrainian Digital Design United (UDDU)</a></p>
  </body>
  
 </html>
